<resources>
    <string name="app_name" translatable="false">Sindhi Keyboard</string>
    <string name="str_dont_worry">Don’t Worry no personal data is ever recorded by using Sindhi Keyboard</string>

    <string name="str_test">Search Here</string>
    <string name="label_history">History</string>
    <string name="menu_feedback">Feedback</string>

    <string name="ime_name" translatable="false">Sindhi Keyboard</string>

    <string name="title_home">Home</string>
    <string name="RateUs">Rate us</string>
    <string name="ShareApp">Share App</string>
    <string name="MoreApp">More App</string>
    <string name="enable_keyboard">Enable Keyboard</string>
    <string name="set_keyboard">Set Keyboard</string>
    <string name="select_lang">Select languages</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>

    <string name="product_id" translatable="false">allremoveads</string>
    <string name="licence_key" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAgm66jC2EzS6T9cmLEdWzWSEktXwMuTSBLd+Q1kA03OZa5ZXuHyNiDAHwNr4d6+0qqR31Bz1+/ZO8/mNI6Pc/nBx3nFiVaLjABaxsG3F4XH5B7PONKMyvGYEunzZC5dey1kNIZYbK0K55FFIkTH5XtoqJOUUvio7tsV0two9n+mR6k40LiTmSF+d1XKuOcz/y+fMOQtwqG5uSXFswlpqRRiVyC6yZwLF4A+qluj+0XL+VmI+gL7I5MRKg+j0mAmgNkPwV17EfHARvMx8RFZZBSb9UOzT8ixeSxQq3GyAPj+yEx1oPBLpDHhmh0isIKgdLHk/zfRc0/Bcsz3ZHEWfTrwIDAQAB</string>

    <string name="str_u1" translatable="false">بے وفا</string>
    <string name="str_status_2" translatable="false">وطن</string>

    <string name="ads_consent">Ads Consent</string>
    <string name="splitPattern" translatable="false">!@#*!@#</string>
    <string name="privacy_policy"><a href="https://sites.google.com/view/privacypolicysoloftechappsol">Privacy Policy</a></string>
    <string name="ad_is_loading">Ad is loading…</string>
    <string name="activate_sindhi_keyboard">Activate Sindhi Keyboard</string>
    <string name="switch_sindhi_keyboard">Switch Sindhi Keyboard</string>
    <string name="set_up_easy_sindhi_keyboard">Set Up Easy Sindhi Keyboard</string>

    <string name="edit_layout">Text Editing</string>
    <string name="emoji_layout">Emoji</string>
    <string name="HusnEguftar_layout"> حُسن گفتار </string>

    <string name="label_app_language">App Language</string>
    <string name="label_app_update">Check App Update</string>
    <string name="label_share">Share</string>

    <string name="label_apply_theme">Apply Theme</string>

    // Settings Screen
    <string name="shareFb">Share and Feedback</string>
    <string name="enableVoiceTyping">Use voice typing</string>
    <string name="number_row">Number row</string>
    <string name="soundOnKeyPress">Sound on key-press</string>
    <string name="longPressForSymbols">Long press for symbols</string>
    <string name="showPopUp">Show popup on keypress</string>
    <string name="vibration">Vibration on keypress</string>
    <string name="gesture_delete">Enable gesture delete</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_apps">More Apps</string>
    <string name="label_themes">Themes</string>
    <string name="label_keyboard_settings">Keyboard Settings</string>
    <string name="label_test_line">Test Your Keyboard</string>
    <string name="label_test_theme">Test Theme</string>
    <string name="survey_1">Feature does not working</string>
    <string name="survey_2">Too many ads</string>
    <string name="survey_3">I don’t need it</string>
    <string name="survey_4">Other</string>
    <string name="label_message">Message</string>
    <string name="label_next">Next</string>
    <string name="done">Done</string>
    <string name="label_tap_here_to_exit">Tap Here To Exit</string>
    <string name="see_more">See More</string>
    <string name="explore_more">Explore More</string>
    <string name="label_sindhi_keyboard">Sindhi Keyboard</string>
    <string name="label_daily_status">Daily Status</string>
    <string name="label_sindhi_status">Sindhi Status</string>
    <string name="label_settings">Settings</string>
    <string name="label_translation">Translation</string>
    <string name="label_speechTotext">Speech to text</string>
    <string name="label_conversation">Conversation</string>
    <string name="label_explore_feature">Explore Feature</string>
    <string name="label_we_build_what_you_desire">We build what you desire</string>
    <string name="label_select_features_fit_your_needs">Select features fit your needs</string>
    <string name="label_wallpapers">Wallpapers</string>
    <string name="label_sindhi_editor">Sindhi Editor</string>
    <string name="label_live_themes">Live Themes</string>
    <string name="label_photo_on_keyboard">Photo Keyboard</string>
    <string name="label_photo_translator">Photo Translator</string>
    <string name="label_instant_stickers">Instant Stickers</string>
    <string name="initializing_consent_setup">Initializing Consent Setup...</string>
    <string name="label_w_1_descrption">Customize your Sindhi Keyboard with vibrant and stylish themes.</string>
    <string name="label_w_2_descrption">Enhance your communication with beautiful Sindhi language expression.</string>
    <string name="label_w_3_descrption">Express yourself with fun stickers and emojis while typing in Sindhi.</string>
    <string name="label_disable">Disable</string>
    <string name="label_remove_ads">Remove Ads</string>
    <string name="label_speech_to_n_text">Speech to\ntext</string>
    <string name="label_share_app">Share app</string>
    <string name="label_dictionary">Dictionary</string>
    <string name="label_favourite">Favourite</string>
    <string name="label_coming_soon">Coming Soon</string>
    <string name="label_text_resize">Text Resize</string>
    <string name="label_text_reverse">Text Reverse</string>
    <string name="label_text_translator">Text Translator</string>
    <string name="label_text_to_audio_file">Text to audio file</string>
    <string name="ad">Ad</string>
    <string name="sindhi_editor">Sindhi Editor</string>
    <string name="sindhi_stickers">Sindhi Stickers</string>
    <string name="label_sticker">Stickers</string>
    <string name="label_add">Add</string>
    <string name="label_starting_download">Starting download...</string>
    <string name="label_sticker_details">Stickers Details</string>
    <string name="label_ready">Speak in English</string>
    <string name="label_listening">Listening…</string>
    <string name="label_ended">Ended…</string>
    <string name="label_no_stickers_added">No Stickers Added</string>
    <string name="label_add_stickers">Add Stickers</string>
    <string name="label_bg_color">BG Color</string>
    <string name="label_description_exit_editing">The changes will not be saved. Are you sure you want to quit?</string>
    <string name="are_you_sure_you_want_to_clear_conversation">Are you sure you want to clear conversation?</string>
    <string name="label_cancel_anytime">Cancel Anytime</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_add_text">Add Text</string>
    <string name="label_background">Background</string>
    <string name="label_enter_text">Enter Text</string>
    <string name="label_select_font">Select Font</string>
    <string name="label_select_fonts">Select Fonts</string>
    <string name="label_select_background_images">Select Background Images</string>
    <string name="label_phone_storage">Phone Storage</string>
    <string name="label_select_sticker">Select Stickers</string>
    <string name="label_view_more">View More</string>
    <string name="label_add_sticker">Add Sticker</string>
    <string name="label_quit_editing">Quit Editing</string>
    <string name="save_poster">Save Poster</string>
    <string name="are_you_sure_to_save_changes">Are you sure to Save Changes?</string>
    <string name="no_text">No Text</string>
    <string name="there_is_no_text_in_the_field">There is no text in the field!</string>
    <string name="label_discard">Discard</string>
    <string name="label_recent_colors">Recent Colors</string>
    <string name="label_ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_write_to_translate">Write to translate…</string>
    <string name="label_details">Details</string>
    <string name="details">Details</string>
    <string name="upgrade_to_premium_amp_get"><![CDATA[Upgrade to Premium & Get]]></string>
    <string name="ad_free_experience">Ad-Free Experience</string>
    <string name="label_free_photo_translator_to_multiple_languages">Free Photo Translator to Multiple Languages</string>
    <string name="label_cancel_subscription">You may manage or cancel subscriptions on</string>
    <string name="label_cancel_subscription_on_google"><u>Google Play</u></string>
    <string name="term_amp_services"><u>Term &amp; Services</u></string>
    <string name="label_privacy_policy"><u>Privacy Policy</u></string>
    <string name="how_to_unsubscribe"><u>How to Unsubscribe?</u></string>
    <string name="label_ad_free_exp">Ad-Free Experience:</string>
    <string name="label_ad_free_experience_des">Enjoy an ad-free environment with the Urdu Keyboard VIP subscription.</string>
    <string name="label_payment_process">Payment Process:</string>
    <string name="label_payment_process_des">Once you confirm a purchase, the subscription fee will be billed through the Google Play Store.</string>
    <string name="label_cancellation_terms">Cancellation Terms:</string>
    <string name="label_cancellation_terms_des">If you decide to cancel, the subscription will remain active until the end of the current month or year billing cycle.</string>
    <string name="label_automatic_renewal">Automatic Renewal:</string>
    <string name="label_loading_subscription_details">Loading Subscription Details</string>
    <string name="label_automatic_renewal_des">Subscriptions will automatically renew, unless you turn off the auto-renewal feature at least 24 hours before the current period ends.</string>
    <string name="label_managing_your_subs">Managing Your Subscription:</string>
    <string name="label_managing_your_subs_des">You have the control to manage your subscription and disable auto-renewal in your Google Play Store account settings.</string>
    <string name="label_manage_subscrptions">Manage Subscription</string>
    <string name="manage_subscription_here">Manage Subscription here,</string>
    <string name="no_initial_payment_cancel_anytime">No Initial Payment, Cancel Anytime</string>
    <string name="get_premium_now">Get Premium Now</string>
    <string name="all_features_unlocked">All Features Unlocked</string>
    <string name="access_all_features">Access All Features</string>
    <string name="access_all_features_icon">Access All Features Icon</string>
    <string name="_100_ads_free_experience">100% Ads Free Experience</string>
    <string name="no_ads">No Ads</string>
    <string name="unlimited_access">Unlimited Access</string>
    <string name="uninstall">UnInstall</string>
    <string name="change_theme">Change Theme</string>
</resources>