<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sindhikeyboard.ui.activities.SurveyActivity">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:tint="@color/black"
            android:layout_marginStart="@dimen/_16sdp"
            android:padding="@dimen/_4sdp"
            android:src="@drawable/back" />


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fr_ads"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivIllustration"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_survey" />

            <!-- Tiêu đề -->
            <TextView
                android:id="@+id/tvTitle"
                style="@style/text_bold_16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:text="Issues encountered during usage"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivIllustration" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle">

                <RadioButton
                    android:id="@+id/rbFeature"
                    style="@style/text_regular_12"
                    android:layout_width="match_parent"
                    android:gravity="center|start"
                    android:layoutDirection="rtl"
                    android:text="@string/survey_1"
                    android:textColor="@color/black"
                    android:textDirection="ltr" />

                <RadioButton
                    android:id="@+id/rbAds"
                    style="@style/text_regular_12"
                    android:layout_width="match_parent"
                    android:gravity="center|start"
                    android:layoutDirection="rtl"
                    android:text="@string/survey_2"
                    android:textColor="@color/black"
                    android:textDirection="ltr" />

                <RadioButton
                    android:id="@+id/rbDontNeed"
                    style="@style/text_regular_12"
                    android:layout_width="match_parent"
                    android:gravity="center|start"
                    android:layoutDirection="rtl"
                    android:text="@string/survey_3"
                    android:textColor="@color/black"
                    android:textDirection="ltr" />

                <RadioButton
                    android:id="@+id/rbOther"
                    style="@style/text_regular_12"
                    android:layout_width="match_parent"
                    android:gravity="center|start"
                    android:layoutDirection="rtl"
                    android:text="@string/survey_4"
                    android:textColor="@color/black"
                    android:textDirection="ltr" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/bottomButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_16sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroup">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCancel"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:fontFamily="@font/lemonada_bold"
                    android:text="@string/label_cancel"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_10ssp"
                    app:backgroundTint="#33AAAABB"
                    app:cornerRadius="26dp" />

                <Space
                    android:layout_width="2dp"
                    android:layout_height="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUninstall"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lemonada_bold"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/uninstall"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_10ssp"
                    app:backgroundTint="#0575E6"
                    app:cornerRadius="26dp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.cardview.widget.CardView
        android:id="@+id/fr_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="1dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include layout="@layout/native_admob_media_left_side_shimmer" />
        </com.facebook.shimmer.ShimmerFrameLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>