<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sindhikeyboard.ui.activities.KeyboardSelectionActivity">

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/ivActivateKeyboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:fontFamily="@font/lexend_semibold"
        android:gravity="center"
        android:text="@string/set_up_easy_sindhi_keyboard"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@+id/g2KeyboardSelect"
        app:layout_constraintTop_toBottomOf="@+id/ivActivateKeyboard" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g2KeyboardSelect"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnActivate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_disabled_keyboard"
        android:drawableStart="@drawable/ic_one_default"
        android:drawableEnd="@drawable/ic_next"
        android:fontFamily="@font/lexend_medium"
        android:layoutDirection="locale"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/activate_sindhi_keyboard"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/btnSwitch"
        app:layout_constraintTop_toBottomOf="@+id/g2KeyboardSelect" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/bg_disabled_keyboard"
        android:drawableStart="@drawable/ic_two_default"
        android:drawableEnd="@drawable/ic_next"
        android:fontFamily="@font/lexend_medium"
        android:layoutDirection="locale"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:text="@string/switch_sindhi_keyboard"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/g4KeyboardSelect"
        app:layout_constraintTop_toBottomOf="@+id/btnActivate" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g4KeyboardSelect"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/clAds"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <FrameLayout
            android:id="@+id/adViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@drawable/ad_bg_banner"
            android:padding="@dimen/_2sdp"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayoutBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1">

                <include layout="@layout/size_native_small_shimmer" />
            </com.facebook.shimmer.ShimmerFrameLayout>

        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/nativeAdContainerAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_3sdp"
            app:cardBackgroundColor="@color/native_ad_background"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/native_admob_media_left_side_shimmer" />
                <!--<include layout="@layout/native_admob_media_left_side" />-->
            </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>